<resources>
    <string name="app_name">nextstep</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_prompt">Don\'t have an Account? Sign Up Here!</string>
    <string name="login_prompt">Already have an accoung Login!</string>
    <string name="profile_title">Describe yourself!</string>
    <string name="profile_prompt">Please fill out your personal data</string>
    <string name="submit">Submit</string>
    <string name="add_profile_prompt">Add Profile Picture</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_position">Current Position</string>
    <string name="prompt_institution">Institution</string>
    <string name="prompt_major">Major</string>
    <string name="prompt_description">Describe your personality, interest, goal, career briefly</string>
    <string name="picture">picture</string>
    <string name="review">Review My Answer</string>
    <string name="lorem_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore</string>
    <string name="previous">Previous</string>
    <string name="choose">Choose</string>
    <string name="recommend_career_title">Here is our top Recommendations</string>
    <string name="txt_please_choose_one">Please choose one</string>
    <string name="txt_home">Home</string>
    <string name="txt_roadmap">Roadmap</string>
    <string name="txt_search">Search</string>
    <string name="txt_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_text_prompt">Please answer the question below accordingly</string>
    <string name="txt_question_1">Question 1</string>
    <string name="txt_question_2">Question 2</string>
    <string name="txt_question_3">Question 3</string>
    <string name="txt_greeting">Hello, %1$s</string>
    <string name="career_placeholder">Network Engineer</string>
    <string name="txt_title_progress">Keep your learning progress</string>
    <string name="txt_menu_roadmap">menu roadmap</string>
    <string name="txt_menu_search">menu search</string>
    <string name="txt_menu_cv_builder">menu cv builder</string>
    <string name="txt_menu_personality_test">menu personality test</string>
    <string name="txt_my_roadmap">My Roadmap</string>
    <string name="txt_discover_roadmap">Discover other Roadmap</string>
    <string name="txt_cv_builder">Try Our CV Builder</string>
    <string name="txt_personal_test">Ask AI to choose my career</string>
    <string name="txt_mark_as_done">Mark as done</string>
    <string name="txt_back">back</string>
    <string name="txt_roadmap_title">Here is your learning path to be:</string>
    <string name="txt_progress">Keep up your learning progress!</string>
    <string name="txt_account_setting">Account Setting</string>
    <string name="txt_premium_plan">Premium Plan</string>
    <string name="txt_log_out">Log out</string>
    <string name="txt_discover_title">Discover other career paths</string>

    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="txt_show_learning_path">Show Learning Path</string>
    <string name="txt_education">Education</string>
    <string name="txt_dummy_institute">Institute Teknologi Bandung</string>
    <string name="txt_dummy_year">2024</string>
    <string name="txt_dummy_major">Jurusan Informatika</string>
    <string name="txt_technical">Technical Skills</string>
    <string name="txt_dummy_skill">Programming Language: Javascript, CSS, HTML</string>
    <string name="txt_dummy_framework">Frameworks and Library: Reactjs, Tailwind CSS, React Native</string>
    <string name="txt_experience">Experience</string>
    <string name="txt_dummy_experience">Bangkit Capstone NextStep</string>
    <string name="txt_dummy_experience_detail">Membuat project career guidelines nextstep yang membantu para siswa dalam menentukan karir yang ingin mereka capai, serta mengenerate cv agar mereka bisa melamar pekerjaan</string>
    <string name="txt_project">Project</string>
    <string name="txt_generate_cv">Generate CV</string>
    <string name="txt_personal_information">Personal Information</string>
    <string name="input_your_skill_prompt">Input your skill</string>
    <string name="latest_job_prompt">Add your latest workplace and year joined</string>
    <string name="describe_the_responsibility_prompt">Describe the responsibility</string>
    <string name="previous_job_prompt">Add your previous workplace and year joined</string>
    <string name="project_prompt">Add your project name and year created</string>
    <string name="project_details_prompt">Describe the project details</string>
    <string name="txt_preview">Preview</string>
    <string name="txt_create">Create</string>
    <string name="degree_major_prompt">Degree / Major</string>
    <string name="txt_year">year</string>
    <string name="txt_create_cv">Let\'s Create an Interesting CV!</string>
    <string name="txt_you_have_not_chosen_any_career_yet">You haven\'t chosen any career yet</string>
    <string name="txt_change_learning_path">Change Learning Path</string>
    <string name="txt_update_my_data">Update My Data</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_save">Save</string>
    <string name="txt_update_your_data">Update your Data</string>
    <string name="txt_choose_this_path">Choose this Path</string>
    <string name="txt_about">About</string>
    <string name="txt_go">Go</string>
    <string name="txt_ask_gemini">Ask Gemini</string>
    <string name="txt_already_taken_the_test_skip_here">Already taken the test? skip here</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_logout_prompt">You are about to logging out, Continue?</string>
</resources>