<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_home"
        android:iconTint="@color/white"
        />

    <item
        android:id="@+id/menu_roadmap"
        android:icon="@drawable/ic_roadmap"
        android:title="@string/txt_roadmap"
        android:iconTint="@color/white"
        />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/txt_search"
        android:iconTint="@color/white"
        />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/txt_profile"
        android:iconTint="@color/white"
        />
</menu>